--- a/frontend/client/src/app/pages/register/register.css
+++ b/frontend/client/src/app/pages/register/register.css
@@ -15,11 +15,12 @@
 .register-container h2 {
     text-align: center;
     margin-bottom: 8px;
+    font-size: 30px;
 }
 
 .register-container input {
     padding: 12px 14px;
-    font-size: 15px;
+    font-size: 20px;
     border-radius: 8px;
     border: 1px solid #ccc;
     outline: none;
@@ -29,7 +30,7 @@
 .register-container button {
     margin-top: 8px;
     padding: 12px;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 600;
     border: none;
     border-radius: 8px;
@@ -46,7 +47,7 @@
 /* Footer text */
 .register-container p {
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .register-container a {
