--- a/frontend/client/src/app/pages/weather/weather.css
+++ b/frontend/client/src/app/pages/weather/weather.css
@@ -13,4 +13,21 @@
     padding: 20px;
     border-radius: 8px;
     width: 300px;
+    font-size: 18px;
+}
+
+.close-btn {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 22px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
